[workspace]
members=[
  "auction/program",
  "metaplex/program",
  "token-entangler/program",
  "token-vault/program",
  "token-vault/test",
  "token-metadata",
  "nft-packs/program",
  "fixed-price-sale/program"
]
exclude = [
  "fixed-price-sale/cli",
  "auction-house/program",
  "candy-machine/program",
  "bubblegum/program",
  "candy-wrapper/program",
]
