[workspace]
[package]
name = "mpl-auction-house"
version = "1.2.4"
edition = "2021"
description = "Decentralized Sales Protocol for Solana Tokens"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license = "AGPL-3.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "~1.11.6"
anchor-lang = { git = "https://github.com/GenesysGo/anchor.git", branch = "cavey/das_api_version" }
anchor-spl = { git = "https://github.com/GenesysGo/anchor.git", branch = "tracy/test-validator-geyser-config-and-spl-version" }
spl-token = { git = "https://github.com/solana-labs/solana-program-library/", features = ["no-entrypoint"] }
spl-associated-token-account = {version = "~1.0.3", features = ["no-entrypoint"]}
mpl-token-metadata = { version="~1.2.7", features = [ "no-entrypoint" ] }
thiserror = "~1.0"
arrayref = "~0.3.6"

[dev-dependencies]
anchor-client = { git = "https://github.com/GenesysGo/anchor.git", branch = "tracy/test-validator-geyser-config-and-spl-version" }
shellexpand = "~2.1.0"
serde_json = "~1.0"
solana-program = "~1.11.6"
mpl-testing-utils= {path="../../core/rust/testing-utils" }
solana-program-test = "~1.11.6"
solana-sdk = "~1.11.6"
env_logger="~0.9.0"

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
