[package]
name = "mpl-fixed-price-sale"
version = "0.2.3"
description = "Created with Anchor"
edition = "2018"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_fixed_price_sale"

[features]
no-entrypoint = []
test-bpf = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/GenesysGo/anchor.git", branch = "tracy/test-validator-geyser-config-and-spl-version", features=["init-if-needed"]}
anchor-spl = { git = "https://github.com/GenesysGo/anchor.git", branch = "tracy/test-validator-geyser-config-and-spl-version" }
spl-token = { git = "https://github.com/solana-labs/solana-program-library/", features = ["no-entrypoint"] }
mpl-token-metadata = { features = [ "no-entrypoint" ], path = "../../token-metadata/program/" }

[dev-dependencies]
anchor-client = { git = "https://github.com/GenesysGo/anchor.git", branch = "tracy/test-validator-geyser-config-and-spl-version" }
solana-program-test = "~1.11.6"
solana-program = "~1.11.6"
solana-sdk = "~1.11.6"
spl-associated-token-account = "~1.1.1"
