[workspace]
[package]
name = "mpl_gumdrop"
version = "0.1.1"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license = "AGPL-3.0"
edition = "2021"
keywords = ["solana", "merkle", "distributor"]

[profile.release]
overflow-checks = true

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_gumdrop"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/GenesysGo/anchor.git", branch = "tracy/test-validator-geyser-config-and-spl-version" }
anchor-spl = { git = "https://github.com/GenesysGo/anchor.git", branch = "tracy/test-validator-geyser-config-and-spl-version" }
solana-program = "1.11.6"
spl-token = "3.5.0"
spl-associated-token-account = { version = "=1.0.3", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version="=1.2.7", features = [ "no-entrypoint" ] }