[package]
name = "mpl-token-entangler"
version = "0.1.3"
edition = "2018"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_token_entangler"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/GenesysGo/anchor.git", branch = "tracy/test-validator-geyser-config-and-spl-version" }
anchor-spl = { git = "https://github.com/GenesysGo/anchor.git", branch = "tracy/test-validator-geyser-config-and-spl-version" }
spl-token = { version = "~3.5.0",  features = ["no-entrypoint"] }
spl-associated-token-account = {version = "~1.1.1", features = ["no-entrypoint"]}
mpl-token-metadata = { path = "../../token-metadata/program", features = [ "no-entrypoint" ] }
thiserror = "~1.0"
arrayref = "~0.3.6"

[dev-dependencies]
solana-program-test = "~1.11.6"
solana-sdk = "~1.11.6"