[package]
name = "metaplex-token-metadata-test-client"
version = "0.1.0"
description = "Metaplex Library Metadata Integration Test Client"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex"
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
solana-client = "1.11.6"
solana-program = "1.11.6"
solana-sdk = "1.11.6"
bincode = "1.3.2"
borsh = "0.9.1"
clap = "2.33.0"
solana-clap-utils = "1.11.6"
solana-cli-config = "1.11.6"
mpl-token-metadata = { path="../program", features = [ "no-entrypoint" ] }
spl-token = { version="3.2.0", features = [ "no-entrypoint" ] }
