[package]
name = "mpl-token-metadata"
version = "1.3.6"
description = "Metaplex Metadata"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license = "AGPL-3.0"
edition = "2021"
readme = "README.md"

[features]
no-entrypoint = []
test-bpf = []
serde-feature = ["serde", "serde_with"]

[dependencies]
num-derive = "0.3"
arrayref = "0.3.6"
num-traits = "0.2"
solana-program = "1.11.6"
mpl-token-vault = { git = "https://github.com/GenesysGo/metaplex-program-library.git", branch = "cavey/das_api_version", features = [ "no-entrypoint" ] }
spl-token = { git = "https://github.com/solana-labs/solana-program-library/", features = [ "no-entrypoint" ] }
spl-associated-token-account = { git = "https://github.com/solana-labs/solana-program-library/", features = ["no-entrypoint"] }
thiserror = "1.0"
borsh = "0.9.2"
shank = { version = "~0.0.4" }
serde = { version = "1.0.136", optional = true }
serde_with = { version = "1.12.0", optional = true }

[dev-dependencies]
solana-sdk = "1.11.6"
solana-program-test = "1.11.6"

[lib]
crate-type = ["cdylib", "lib"]
